Fix QuestCompleter Alignment

--- a/src/equicordplugins/questCompleter.discordDesktop/style.css
+++ b/src/equicordplugins/questCompleter.discordDesktop/style.css
@@ -1,5 +1,5 @@
-.vc-quest-completer-icon{
-    bottom: -4px;
+.vc-quest-completer-icon {
+    bottom: -2px;
     padding: 0;
     width: var(--space-32);
     min-width: 0;
